[tool.poetry]
name = "tkloudi"
version = "0.1.0"
description = "A CloudI service management and API testing tool."
authors = ["Filipe Moraes <dev_filipe at hotmail dot com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
